# pdf-translation

./: .gitignore  AGENTS.md  BUG_DIAGNOSIS.md  CLAUDE.md  EVOMAP_EVALUATION.md  FALLBACK_ANALYSIS.md  GITHUB_ISSUE_TEMPLATE.md  ISSUES_ANALYSIS.md  PR_PROPOSAL.md  README.md  SKILL.md  SUBMIT_PR_GUIDE.md  add_page_numbers.py  check_specific.py  commit.sh  deep_inspect.py  extract_untranslated.py  find_all_untranslated.py  merge_final.py  merge_fixed_pages.py  merge_translated_pages.py  pdf_translator.py  pyproject.toml  pytest.ini  requirements.txt  specification.yaml  translate_pdf.py  verify_final.py  verify_fixed.py  verify_merged.py
.github/workflows/: ci.yml
.sprint-state/: sprint-state.json
.sprint-state/phase-outputs/: pain-document.md
auspicious-date-selector/docs/plans/: 2026-03-07-auspicious-date-selector-design.md  2026-03-07-auspicious-date-selector-plan.md
config/: AGENTS.md  config.bailian-only.json  config.example.json  config.foreign-only.json  config.json  config.multi-model.json  config.openai.json  config.siliconflow.json  config.test.json  config.volcengine.json  config.zhipu.json  test_config.json
docs/: AGENTS.md  README_PROJECT.md
docs/plans/: 2026-03-24-multi-model-fallback.md
evo_capsule/: AGENTS.md  capsule_info.json  manifest.json
evo_capsule/content/: README.md  USAGE.md  pdf_translator.py  translate_pdf.py
examples/: README.md
examples/output/: Vibe Coding Building Production-Grade Software With GenAI, Chat, Agents, and Beyond (Gene Kim, Steve Yegge).zh.glossary.csv
test/: AGENTS.md  COMPLETE_TEST_REPORT.md  bandit_report.txt  conftest.py  example_usage.py  flake8_report.txt  lizard_report.txt  mypy_report.txt  performance_test.py  pylint_report.txt  pytest_quick_report.txt  pytest_report.txt  radon_report.txt  ruff_report.txt  test_clean_json_output.py  test_cli.py  test_config_creation.py  test_control_char_patch.py  test_correct_urls.py  test_cross_page_patch.py  test_debug.py  test_diagnostic_cross_page.py  test_engines.py  test_fallback_translator.py  test_final.py  test_fix.py  test_model_connectivity.py  test_multi_model.py  test_multi_model_final.py  test_opencode_models.py  test_page13_diagnostic.py  test_single_api.py  test_translate.py  test_translate_docs.py  test_utils.py
(+2 files in other folders)
