[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-translation"
version = "0.1.0"
description = "PDF translation tool based on PDFMathTranslate-next and BabelDOC"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Boying Liu"},
]
keywords = ["pdf", "translation", "babeldoc", "pdf2zh", "bilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "pdf2zh-next>=0.1.0",
    "PyMuPDF>=1.23.0",
    "pydantic>=2.0.0",
    "configargparse>=1.5.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "bandit>=1.7.0",
    "radon>=6.0.0",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
pdf-translate = "translate_pdf:main"

[project.urls]
Homepage = "https://github.com/boyingliu01/pdf-translation"
Issues = "https://github.com/boyingliu01/pdf-translation/issues"

[tool.setuptools]
py-modules = ["pdf_translator", "translate_pdf"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = [
    "-v",
    "--ignore=test/test_final.py",
    "--ignore=test/example_usage.py",
    "--ignore=test/performance_test.py",
    "--ignore=test/test_translate_docs.py",
]

[tool.coverage.run]
source = ["pdf_translator", "translate_pdf"]

[tool.coverage.report]
show_missing = true
skip_covered = false
